build_output4.txt
[1/2036] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/Scripting/Fetching.cpp.o
FAILED: [code=1] Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/Scripting/Fetching.cpp.o 
/opt/homebrew/bin/ccache /usr/bin/c++ -DENABLE_COMPILETIME_FORMAT_CHECK -DLibWeb_EXPORTS -DSK_ALLOW_STATIC_GLOBAL_INITIALIZERS=1 -DSK_ASSUME_GL=1 -DSK_CODEC_DECODES_BMP -DSK_CODEC_DECODES_GIF -DSK_CODEC_DECODES_ICO -DSK_CODEC_DECODES_JPEG -DSK_CODEC_DECODES_PNG -DSK_CODEC_DECODES_RAW -DSK_CODEC_DECODES_WBMP -DSK_CODEC_DECODES_WEBP -DSK_ENABLE_API_AVAILABLE -DSK_ENABLE_AVX512_OPTS -DSK_ENABLE_DUMP_GPU -DSK_ENABLE_PRECOMPILE -DSK_FONTMGR_ANDROID_AVAILABLE -DSK_FONTMGR_CORETEXT_AVAILABLE -DSK_FONTMGR_FONTCONFIG_AVAILABLE -DSK_FONTMGR_FREETYPE_DIRECTORY_AVAILABLE -DSK_FONTMGR_FREETYPE_EMBEDDED_AVAILABLE -DSK_FONTMGR_FREETYPE_EMPTY_AVAILABLE -DSK_GAMMA_APPLY_TO_A8 -DSK_GANESH -DSK_GL -DSK_HAS_WUFFS_LIBRARY -DSK_METAL -DSK_SUPPORT_PDF -DSK_TRIVIAL_ABI=[[clang::trivial_abi]] -DSK_TYPEFACE_FACTORY_CORETEXT -DSK_TYPEFACE_FACTORY_FREETYPE -DSK_USE_PERFETTO -DSK_XML -I/Users/lonely/important/ladybird -I/Users/lonely/important/ladybird/Services -I/Users/lonely/important/ladybird/Libraries -I/Users/lonely/important/ladybird/Build/debug/Lagom -I/Users/lonely/important/ladybird/Build/debug/Lagom/Services -I/Users/lonely/important/ladybird/Build/debug/Lagom/Libraries -I/Users/lonely/important/ladybird/Meta/Lagom/../.. -I/Users/lonely/important/ladybird/Meta/Lagom/../../Libraries -I/Users/lonely/important/ladybird/Meta/Lagom/../../Services -I/Users/lonely/important/ladybird/Build/debug -isystem /opt/homebrew/opt/python@3.13/Frameworks/Python.framework/Versions/3.13/include/python3.13 -isystem /Users/lonely/important/ladybird/Build/debug/vcpkg_installed/arm64-osx-dynamic/include -isystem /Users/lonely/important/ladybird/Build/debug/vcpkg_installed/arm64-osx-dynamic/include/skia -isystem /Users/lonely/important/ladybird/Build/debug/vcpkg_installed/arm64-osx-dynamic/include/libxml2 -g -std=c++2b -arch arm64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX26.0.sdk -mmacosx-version-min=14.0 -fPIC -fcolor-diagnostics -march=native -Wall -Wextra -fno-exceptions -ffp-contract=off -Wcast-qual -Wformat=2 -Wimplicit-fallthrough -Wlogical-op -Wmissing-declarations -Wmissing-field-initializers -Wsuggest-override -Wno-invalid-offsetof -Wno-unknown-warning-option -Wno-unused-command-line-argument -Werror -fconstexpr-steps=16777216 -Wmissing-prototypes -Wno-implicit-const-int-float-conversion -Wno-user-defined-literals -Wno-unqualified-std-cast-call -fstack-protector-strong -fstrict-flex-arrays=2 -Wno-maybe-uninitialized -Wno-shorten-64-to-32 -fsigned-char -ggnu-pubnames -ggdb3 -Og -fvisibility=hidden -MD -MT Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/Scripting/Fetching.cpp.o -MF Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/Scripting/Fetching.cpp.o.d -o Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/Scripting/Fetching.cpp.o -c /Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:539:19: error: use of undeclared identifier 'settings_object'
  539 |     auto& realm = settings_object.realm();
      |                   ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:546:5: error: unknown type name 'request'
  546 |     request->set_url(url);
      |     ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:546:12: error: cannot use arrow operator on a type
  546 |     request->set_url(url);
      |            ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:547:5: error: unknown type name 'request'
  547 |     request->set_client(&fetch_client);
      |     ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:547:12: error: cannot use arrow operator on a type
  547 |     request->set_client(&fetch_client);
      |            ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:548:5: error: unknown type name 'request'
  548 |     request->set_destination(destination);
      |     ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:548:12: error: cannot use arrow operator on a type
  548 |     request->set_destination(destination);
      |            ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:549:5: error: unknown type name 'request'
  549 |     request->set_initiator_type(Fetch::Infrastructure::Request::InitiatorType::Other);
      |     ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:549:12: error: cannot use arrow operator on a type
  549 |     request->set_initiator_type(Fetch::Infrastructure::Request::InitiatorType::Other);
      |            ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:552:5: error: unknown type name 'request'
  552 |     request->set_mode(Fetch::Infrastructure::Request::Mode::NoCORS);
      |     ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:552:12: error: cannot use arrow operator on a type
  552 |     request->set_mode(Fetch::Infrastructure::Request::Mode::NoCORS);
      |            ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:554:5: error: unknown type name 'request'
  554 |     request->set_credentials_mode(Fetch::Infrastructure::Request::CredentialsMode::SameOrigin);
      |     ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:554:12: error: cannot use arrow operator on a type
  554 |     request->set_credentials_mode(Fetch::Infrastructure::Request::CredentialsMode::SameOrigin);
      |            ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:555:5: error: unknown type name 'request'
  555 |     request->set_parser_metadata(Fetch::Infrastructure::Request::ParserMetadata::NotParserInserted);
      |     ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:555:12: error: cannot use arrow operator on a type
  555 |     request->set_parser_metadata(Fetch::Infrastructure::Request::ParserMetadata::NotParserInserted);
      |            ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:556:5: error: unknown type name 'request'
  556 |     request->set_use_url_credentials(true);
      |     ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:556:12: error: cannot use arrow operator on a type
  556 |     request->set_use_url_credentials(true);
      |            ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:558:80: error: use of undeclared identifier 'on_complete'
  558 |     auto process_response_consume_body = [&settings_object, on_complete = move(on_complete)](auto response, auto body_bytes) {
      |                                                                                ^
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/Scripting/Fetching.cpp:558:44: error: use of undeclared identifier 'settings_object'
  558 |     auto process_response_consume_body = [&settings_object, on_complete = move(on_complete)](auto response, auto body_bytes) {
      |                                            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
ninja: build stopped: subcommand failed.
